--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
   <section id="cake-cart" style="margin-bottom: 60px; text-align: center;">
     <h2>Cake Cart</h2>
     <div style="max-width: 360px; margin: 0 auto; border: 1.5px solid var(--sage-green); border-radius: 12px; box-shadow: 0 4px 12px rgba(156,137,137,0.15); padding: 15px; background-color: var(--light-text);">
-      <img src="cake-cart.jpg" alt="Elegant Cake Cart" style="width: 100%; border-radius: 10px; margin-bottom: 12px;" />
+      <img src="cake-cart.png" alt="Elegant Cake Cart" style="width: 100%; border-radius: 10px; margin-bottom: 12px;" />
       <p style="color: var(--dusty-rose); font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-weight: 600; font-size: 1.1rem;">
         Discover our elegant white cake cart, perfect for weddings and special events. Crafted with sophisticated embroidered wood details and a classic flat white roof, it blends functionality with timeless style.
       </p>
