--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <div style="max-width: 360px; margin: 0 auto; border: 1.5px solid var(--sage-green); border-radius: 12px; box-shadow: 0 4px 12px rgba(156,137,137,0.15); padding: 15px; background-color: var(--light-text);">
       <img src="cake-cart.png" alt="Elegant Cake Cart" style="width: 100%; border-radius: 10px; margin-bottom: 12px;" />
       <p style="color: var(--dusty-rose); font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-weight: 600; font-size: 1.1rem;">
-        Discover our elegant white cake cart, perfect for weddings and special events. Crafted with sophisticated embroidered wood details and a classic flat white roof, it blends functionality with timeless style.
+      COMING SOON: Oh My Nosh Cake Cart A mobile slice of heaven is about to roll in...Elegant design. Gourmet treats. Unforgettable moments. Perfect for birthdays, weddings, pop-ups—and all things sweet! Get early access & launch-day specials [Join the VIP List] Stay tuned. Something seriously delicious is headed your way!
       </p>
       <a href="#contact" style="display: inline-block; margin-top: 12px; padding: 10px 22px; border-radius: 25px; background-color: var(--dusty-rose); color: var(--light-text); font-weight: 700; text-decoration: none; letter-spacing: 0.05em; transition: background-color 0.3s ease;">
         Book or Enquire Now
