--- a/index.html
+++ b/index.html
@@ -302,18 +302,29 @@
 <main>
 
   <!-- Cake Cart Teaser Section -->
-  <section id="cake-cart" style="margin-bottom: 60px; text-align: center;">
-    <h2>Cake Cart</h2>
-    <div style="max-width: 360px; margin: 0 auto; border: 1.5px solid var(--sage-green); border-radius: 12px; box-shadow: 0 4px 12px rgba(156,137,137,0.15); padding: 15px; background-color: var(--light-text);">
-      <img src="cake-cart.png" alt="Elegant Cake Cart" style="width: 100%; border-radius: 10px; margin-bottom: 12px;" />
-      <p style="color: var(--dusty-rose); font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-weight: 600; font-size: 1.1rem;">
-      COMING SOON: Oh My Nosh Cake Cart A mobile slice of heaven is about to roll in...Elegant design. Gourmet treats. Unforgettable moments. Perfect for birthdays, weddings, pop-ups—and all things sweet! Get early access & launch-day specials [Join the VIP List] Stay tuned. Something seriously delicious is headed your way!
-      </p>
-      <a href="#contact" style="display: inline-block; margin-top: 12px; padding: 10px 22px; border-radius: 25px; background-color: var(--dusty-rose); color: var(--light-text); font-weight: 700; text-decoration: none; letter-spacing: 0.05em; transition: background-color 0.3s ease;">
-        Book or Enquire Now
-      </a>
-    </div>
-  </section>
+  <section id="cake-cart" style="margin-bottom: 60px; text-align: center; max-width: 420px; margin-left: auto; margin-right: auto; background-color: var(--light-text); border: 1.5px solid var(--sage-green); border-radius: 12px; box-shadow: 0 4px 12px rgba(156,137,137,0.15); padding: 25px;">
+  <img src="cake-cart.png" alt="Oh My Nosh Cake Cart" style="max-width: 100%; height: auto; border-radius: 10px; margin-bottom: 20px;" />
+  <h2 style="color: var(--dusty-rose); font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; margin-bottom: 18px;">COMING SOON:</h2>
+  <h3 style="color: var(--dusty-rose); font-family: 'Georgia', serif; margin-bottom: 20px; font-weight: 600;">Oh My Nosh Cake Cart</h3>
+  <p style="font-family: 'Georgia', serif; color: var(--dark-text); line-height: 1.5; margin-bottom: 15px;">
+    A mobile slice of heaven is about to roll in...
+  </p>
+  <p style="font-family: 'Georgia', serif; color: var(--dark-text); line-height: 1.5; margin-bottom: 15px;">
+    Elegant design. Gourmet treats. Unforgettable moments.
+  </p>
+  <p style="font-family: 'Georgia', serif; color: var(--dark-text); line-height: 1.5; margin-bottom: 15px;">
+    Perfect for birthdays, weddings, pop-ups — and all things sweet!
+  </p>
+  <p style="font-family: 'Georgia', serif; color: var(--dusty-rose); font-weight: 600; margin-bottom: 20px;">
+    Get early access & launch-day specials
+  </p>
+  <a href="#contact" style="display: inline-block; padding: 12px 28px; background-color: var(--dusty-rose); color: var(--light-text); border-radius: 25px; font-weight: 700; font-family: 'Georgia', serif; text-decoration: none; letter-spacing: 0.05em; transition: background-color 0.3s ease;">
+    Join the VIP List
+  </a>
+  <p style="font-family: 'Georgia', serif; color: var(--dark-text); line-height: 1.4; margin-top: 25px; font-style: italic;">
+    Stay tuned. Something seriously delicious is headed your way!
+  </p>
+</section>
 
   <section id="cakes"><h1>Cakes</h1><div class="products-grid" id="cakes-grid"></div></section>
   <section id="cookies"><h1>Cookies</h1><div class="products-grid" id="cookies-grid"></div></section>
